  Idea from FiranMUX.

- Added connrecord(), connected player record (as in WHO).

- Added entrances() function, similar to @entrances command. Based on an
  idea from PennMUSH.

- You can now get attribute flags with flags(<obj>/<attr>). Based on an
  idea from PennMUSH.

- Added graball(), which is to grab() what matchall() is to match().

- hasflag() can now detect object types.

- Added hasflags(), which can operate on multiple lists of flags and
  types, returning true if all elements in any of the lists are true.

- Added hears(), moves(), and knows() functions for checking Presence
  permissions.

- Added helptext(), which retrieves an enetry from an indexed textfile
  (i.e., help, news, or anything else added via the helpfile or
  raw_helpfile conf directives).

- The third argument to ifelse() -- the 'false' result -- is now optional.

- Added istrue() and isfalse(), which are basically iter()-style filterbool()
  and its reverse.

- Added ilev(), itext(), and inum() functions, for retrieving data
  from multiple levels of nested iter()-type functions. Based on
  an idea from PennMUSH.

- Added itemize() function, which formats a list of items. Typically used
  to turn a list of words into something like "a, b, and c". Based on an
  idea from PennMUSH.

- Added ledit() function, a mass find-and-replace on a list which can
  replace many instances of nested edit() calls.

- lpos(), lattr(), lexits(), lcon(), xcon(), children(), lparent(), and
  the grep() family now take an output delimiter.

- The ljust(), rjust(), and center() functions can take multi-character
  fills.

- The lunion(), linter(), and ldiff() functions are similar to setunion(),
  etc., but an attempt is made to autodetect the list type and sort
  accordingly, or you can specify a sort type, as you can with sort().

- The modify() function now takes lists, enabling multiple variables
  to be modified at once.

- The behavior of remainders in division with negative numbers is